--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   
 </head>
 <body>
-
+<div id="card">
   Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Stan Smoczyk</a>.
