Completed font family and sizing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="Style.css">
   
@@ -12,14 +14,16 @@
   
 </head>
 <body>
-<div id="card">
-  Improve your front-end skills by building projects
+  <div class="cardHolder">
+    <div class="card">
+      <img src="/images/image-qr-code.png" alt="QR Code" style="width: 100%;">
+      <div class="wording">
+        <h3>Improve your front-end skills by building projects</h3>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </div>
 </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Stan Smoczyk</a>.
-  </div>
+
 </body>
 </html>
