update immage path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="cardHolder">
     <div class="card">
-      <img src="/images/image-qr-code.png" alt="QR Code" style="width: 100%;">
+      <img src="images/image-qr-code.png" alt="QR Code" style="width: 100%;">
       <div class="wording">
         <h3>Improve your front-end skills by building projects</h3>
 
